Connecting customer pages to backend