@@ -26,26 +26,48 @@
         <version>8.0.23</version>
         </dependency>
 
-	   <dependency>
+	<dependency>
         <groupId>io.github.juneau001</groupId>
         <artifactId>webapp-jakartaee11-jdk21</artifactId>
         <version>1.0.0</version>
+        </dependency>
+        
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version> <!-- Latest stable version -->
+    </dependency>
+    
+
+    <dependency>
+        <groupId>jakarta.servlet.jsp.jstl</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+        <version>3.0.1</version>
+        <scope>runtime</scope>
     </dependency>
 
+
+
+
     </dependencies>
+    
+    <repositories>
+    <repository>
+        <id>jboss-releases</id>
+        <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+    </repository>
+    </repositories>
+
+    
     
     <build>
          <finalName>BookingSystem</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.12.1</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
-            </plugin>
             <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.4.0</version>
@@ -83,6 +105,18 @@
                 <path>/BookingSystem-1.0-SNAPSHOT</path> <!-- The context path of your web app -->
             </configuration>
         </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.12.1</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
